[package]
name = "steg"
version = "0.1.0"
authors = ["Hemlocked <phantomofrotten@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "my_project"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
steganography = "*"
